<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ralha.velvetapp.filter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="120dp">

        <Button
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Apply" />

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Cear" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Gender" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_group1">
            <RadioButton
                android:id="@+id/gender1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Women"

             />
            <RadioButton
                android:id="@+id/gender2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Men"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Category" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_group2">
            <RadioButton
                android:id="@+id/cat1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dresses"

               />
            <RadioButton
                android:id="@+id/cat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Suits"
                 />
            <RadioButton
                android:id="@+id/cat3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Skirts"
                 />
            <RadioButton
                android:id="@+id/cat4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shirts"
                />
            <RadioButton
                android:id="@+id/cat5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Accessories"
                />
            <RadioButton
                android:id="@+id/cat6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Bags"
                 />
            <RadioButton
                android:id="@+id/cat7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shose"
                />

        </RadioGroup>

        <TextView
            android:id="@+id/size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Size" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_group3">
            <RadioButton
                android:id="@+id/size1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/XS"

                />
            <RadioButton
                android:id="@+id/size2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/S"
                />
            <RadioButton
                android:id="@+id/size3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/M"
                />
            <RadioButton
                android:id="@+id/size4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/L"
             />
                <RadioButton
                    android:id="@+id/size11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/XL"

                    />
            <RadioButton
                android:id="@+id/size5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/XXL"

                />
        </RadioGroup>
        <TextView
            android:id="@+id/color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Color" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_group4">
            <RadioButton
                android:id="@+id/color1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Red"

                />
            <RadioButton
                android:id="@+id/color2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Blue"
                />
            <RadioButton
                android:id="@+id/color3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Yellow"
                />
            <RadioButton
                android:id="@+id/color4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Black" />


            <RadioButton
                android:id="@+id/color5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Green"

                />
            <RadioButton
                android:id="@+id/color6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/White"
                />

            <RadioButton
                android:id="@+id/color7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purple"
               />
            <RadioButton
                android:id="@+id/color8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Orange"
                />
            <RadioButton
                android:id="@+id/color9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purple"
                />
            <RadioButton
                android:id="@+id/color10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pink"
                />
        </RadioGroup>


        <TextView
            android:id="@+id/brandd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Brand" />

        <CheckBox android:id="@+id/brand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Chanel"

        />

        <CheckBox android:id="@+id/brand2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dior"

            />
        <CheckBox android:id="@+id/brand3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Fendi"
            />
        <CheckBox android:id="@+id/brand4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Louis_vuitton"
            />
        <CheckBox android:id="@+id/brand5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hermes"
            />
        <CheckBox android:id="@+id/brand6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Burberry"
            />
        <CheckBox android:id="@+id/brand7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Gucci"
            />
        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Price" />
        <SeekBar
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="26dp"
            android:max="500"
            android:min="100"
            android:layout_alignParentStart="true" />

    </LinearLayout>
</ScrollView>
