<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="com.example.ralha.velvetapp.HomePage">


    <android.support.design.widget.TabLayout
        android:id="@+id/filter"
        android:layout_width="398dp"
        android:layout_height="59dp"
        android:layout_marginTop="412dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        app:tabIndicatorColor="@color/common_google_signin_btn_text_dark_disabled"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:icon="@drawable/favorite"
            android:text="@string/love" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:icon="@drawable/lend"
            android:text="@string/lend" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:icon="@drawable/shopping"
            android:text="@string/bag" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:icon="@drawable/ord"
            android:text="@string/orders" />

        <android.support.design.widget.TabItem
            android:id="@+id/Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:icon="@drawable/account"
            android:text="@string/account" />

    </android.support.design.widget.TabLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/filter"
        tools:layout_editor_absoluteX="348dp"
        tools:layout_editor_absoluteY="1dp"
        android:contentDescription="@string/filter"
        tools:ignore="MissingConstraints" />

    <SearchView
        android:id="@+id/search"
        android:layout_width="35dp"
        android:layout_height="29dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:layout_marginRight="@dimen/app_bar_height"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>



